# efficient-long-context

./: .gitignore  README.md  TECHNICAL_REPORT.md  plan.md  pyproject.toml  report.md
TTT/: report.md  weights-as-memory.md
configs/: dev_1bucket.yaml  dev_2bucket.yaml  dev_Nbucket.yaml  dev_growing.yaml
memflow/: __init__.py  baselines.py  config.py  consolidation.py  data.py  delta_rule.py  growing.py  memflow_layer.py  modal_app.py  model.py  train.py
nmt/: EXPERIMENTS.md  nmt_better_tree_modal.py  nmt_hierarchy_modal.py  nmt_hope_modal.py  nmt_lm_modal.py  nmt_modal.py  nmt_mqar_modal.py  nmt_table_modal.py  nmt_train_modal.py
skills/gpu-debugging/: SKILL.md
skills/gpu-debugging/references/: compute.md  development.md
skills/gpu-debugging/tools/: gpu_sandbox.py
skills/modal-experiment/: SKILL.md
skills/sub-agents/: SKILL.md
skills/sub-agents/references/: sub-agents.md
tests/: test_consolidation.py  test_delta_equiv.py  test_growing.py  test_masking.py  test_model_smoke.py  test_segment_split.py
